--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -64,18 +64,21 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-3dd4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/IMG_4614-googlescholar_preview_rev_1-modified.png" alt="" data-image-width="375" data-image-height="375">
-        <h2 class="u-custom-font u-text u-text-default u-text-1">Qin Weng<br>
-          <br>
-        </h2>
-        <h5 class="u-align-center u-custom-font u-text u-text-default u-text-2">Assistant Professor<br>Information Systems<br>University of Arkansas<br>qinweng@uark.edu
-        </h5>
+        <img class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/IMG_4614-googlescholar_preview_rev_1-modified.png" alt="" data-image-width="375" data-image-height="375">
+        <div class="fr-view u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-md u-align-left-xl u-clearfix u-rich-text u-text u-text-1">
+          <h3 style="line-height: 1; text-align: center;">
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng</span>
+          </h3>
+          <p style="line-height: 1; text-align: center;">
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Assistant Professor<br id="isPasted">Information Systems<br>University of Arkansas<br>
+            </span>
+          </p>
+        </div>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-ffc4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-custom-font u-text u-text-default u-text-1">About</h2>
-        <p class="u-align-left u-custom-font u-text u-text-2"> Dr. Qin Weng&nbsp;is an Assistant Professor of Information Systems in the Sam M. Walton College of Business at the University of Arkansas. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in&nbsp;Information Systems Research, Journal of the Association of Information Systems,&nbsp;Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience&nbsp;in the healthcare industry in the US.</p>
+        <p class="u-align-left u-custom-font u-text u-text-1"> Dr. Qin Weng&nbsp;is an Assistant Professor of Information Systems in the Sam M. Walton College of Business at the University of Arkansas. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in&nbsp;Information Systems Research, Journal of the Association of Information Systems,&nbsp;Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience&nbsp;in the healthcare industry in the US.</p>
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-3" id="sec-49d6">
@@ -231,7 +234,8 @@
     
     
     <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
+        <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
+        <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-left-xl u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/qin-weng-122730129"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-991b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-991b"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
       H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
@@ -239,8 +243,17 @@
           <a class="u-social-url" target="_blank" data-type="Custom" title="Google Scholar" href="https://scholar.google.com/citations?hl=en&amp;user=i4K-AHIAAAAJ"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-2"><img src="images/icons8-google-scholar-48.png" alt=""></span>
           </a>
         </div>
-        <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
