--- a/Qin-Weng.html
+++ b/Qin-Weng.html
@@ -89,7 +89,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Dr. Qin Weng is an Assistant Professor of Information Systems in the Hankamer School of Business at Baylor University. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in Information Systems Research, Journal of the Association of Information Systems, Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience in the healthcare industry in the US.</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Dr. Qin Weng is an Assistant Professor of Information Systems and Business Analytics in the Hankamer School of Business at Baylor University. She received her PhD in Information Systems from the Katz Graduate School of Business at the University of Pittsburgh. Her research focuses on IT project governance and control. She is interested in how IT projects and teams could be successfully managed to benefit individuals, organizations, and society. She has published in Information Systems Research, Journal of the Association of Information Systems, Journal of Strategic Information Systems, and proceedings of major IS conferences. She is an AIS Distinguished Member, and mini-track chair at the Americas Conference on Information Systems and Hawaii International Conference on System Sciences. Prior to her academic career, she had gained over 10 years of professional IT experience in the healthcare industry in the US.</span>
           </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Research Interest</span>
           </h4>
           <p id="isPasted">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Area: IT project management</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Area: Project management, Health IT</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Keywords: control, team, collaboration, personality, network, identity, security</span>
@@ -113,7 +113,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Publications</span>
           </h4>
           <p style="line-height: 1.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment using fsQCA,” Proceedings from 29th Americas Conference on Information Systems, Panama City, Panama, August.</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment Using fsQCA,” Proceedings from 29th Americas Conference on Information Systems, Panama City, Panama, August.</span>
           </p>
           <p style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <span style="font-weight: 700;">Journal of Strategic Information Systems</span> 32(2): 101771.
