--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Area: Project management, Health IT</span>
           </p>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Keywords: control, team, collaboration, personality, network, identity, security</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Keywords: control, team, collaboration, personality, network, identity, security, value</span>
           </p>
           <h4 style="line-height: 1.8;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Publications</span>
@@ -218,13 +218,19 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Conferences</span>
           </h4>
           <p>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, The Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS-57, 2024</span>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Associate Editor, Digital Technologies and the Future of Work Track, ICIS, 2024</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, The Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS-57, 2024–2025</span>
           </p>
           <p>
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, Digital Frontiers of Social Computing for Social Good, in Social Computing Track, AMCIS, 2024</span>
           </p>
           <p id="isPasted" style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Mini-track Chair, The Dark Side of Social Media, in Social Computing Track, AMCIS, 2018–2023</span>
+          </p>
+          <p>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Associate Editor, IS in Healthcare Track, ICIS, 2022</span>
           </p>
           <h4 style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light; font-weight: 700;">Reviewer</span>
@@ -246,7 +252,7 @@
     
     
     <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-4eb0"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-left u-custom-font u-text u-text-custom-color-3 u-text-1">All things work together for good to those who love God, to those who are the called according to His purpose. (Romans: 8:28​)</p>
+        <p class="u-align-center u-custom-font u-text u-text-custom-color-3 u-text-1">My grace is sufficient for you, for My strength is made perfect in weakness." (2 Corinthians 12:9) </p>
         <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-align-left-xl u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://www.linkedin.com/in/qin-weng-122730129"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-991b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-991b"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
