--- a/index.html
+++ b/index.html
@@ -122,18 +122,7 @@
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment Using fsQCA,” Proceedings of 29th Americas Conference on Information Systems, Panama City, Panama, August.</span>
           </p>
           <p style="line-height: 1.6;">
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <span style="font-weight: 700;">Journal of Strategic Information Systems</span> 32(2): 101771. (
-            </span>
-            <a href="files/Weng2023JSIS-Github.pdf" target="_blank" rel="noopener noreferrer" class="u-file-link"></a>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
-              <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-1" href="files/Weng2023JSIS-Github.pdf" rel="noopener noreferrer" target="_blank">read</a>
-            </span>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">)</span>
-            <a href="files/Weng2023JSIS-Github.pdf" class="u-file-link"></a>
-            <span class="u-custom-font" style="font-family: AvenirLT35Light;">
-              <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-2" href="files/Weng2023JSIS-Github.pdf" rel="noopener noreferrer" target="_blank"></a>
-            </span>
-            <a href="files/Weng2023JSIS-Github.pdf" target="_blank" rel="noopener noreferrer" class="u-file-link"></a>
+            <span class="u-custom-font" style="font-family: AvenirLT35Light;">Qin Weng, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <span style="font-weight: 700;">Journal of Strategic Information Systems</span> 32(2): 101771.</span>
           </p>
           <p style="line-height: 1.6;">
             <span class="u-custom-font" style="font-family: AvenirLT35Light;">Viswanath Venkatesh, Qin Weng, Arun Rai, Likoebe M. Maruping (2023). “Guidelines for the Development of Three-Level Models: Bridging Levels of Analysis and Integrating Contextual Influences in IS Research,” <span style="font-weight: 700;">Journal of the Association for Information Systems</span> 24(1): 65-106.
