--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 <p><span>Area: Project management, Health IT</span></p>
       <p><span>Keywords:&nbsp;control, team, collaboration, personality, network, identity, security, value </span></p>
 	  <h3 class="sectionContentTitle">Publication&nbsp;</h3>
-	  <p>Tom Mattson, <u>Qin Weng</u>, Jie Ren (accepted). “Unveiling Gender Dynamics for Mental Health Posts in Social Media and Generative Artificial Intelligence,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January 2025.</p>
-	  <p>Min Ou, <u>Qin Weng</u>, Hope Koch (accepted). “How Intelligent Technologies Influence the Role of Knowledge Workers in the Tech Industry,” Proceeding of the 45th International Conference on Information Systems, Bangkok, Thailand, December 2024.</p>
+	  <p>Tom Mattson, <u>Qin Weng</u>, Jie Ren (accepted). “Unveiling Gender Dynamics for Mental Health Posts in Social Media and Generative Artificial Intelligence,” Proceedings of 58th Hawaii International Conference on Systems Sciences, Hawaii, HI, January 2025&nbsp;</p>
+	  <p>Min Ou, <u>Qin Weng</u>, Hope Koch (2024). “How Intelligent Technologies Influence the Role of Knowledge Workers in the Tech Industry,” Proceeding of the 45th International Conference on Information Systems, Bangkok, Thailand, December.&nbsp;&nbsp;<a target="_blank" href="https://aisel.aisnet.org/icis2024/digtech_fow/digtech_fow/3/">read</a></p>
 <p><u>Qin Weng</u>, Jaime B. Windeler, Likoebe M. Maruping, Viswanath Venkatesh (2024). "Bridge the Gap or Mind the Gap? The Role of Leader Coaching and Communication Technologies in Configurationally Dispersed Teams," <strong>Information &amp; Management </strong>61(6): 104000. <a target="_blank" href="https://authors.elsevier.com/a/1jK-m_8d76quPI">read</a></p>
 <p>Min Ou, Hope Koch, <u>Qin Weng</u> (2024). “Exploring the Impact of Intelligent Technologies on Knowledge Work,” Proceedings of 30th Americas Conference on Information Systems, Salt Lake City, Utah, August: 11. (Selected as a Top Paper &amp; Best Paper Nominee for AMCIS 2024)&nbsp; <a target="_blank" href="https://aisel.aisnet.org/amcis2024/fow/fow/11/">read</a></p>
 <p><span> <u>Qin Weng</u>, Danping Wang, Stephen De Lurgio II, Sebastian Schuetz (2024). "How Do Small-to-Medium-Sized E-Commerce Businesses Stay Competitive? Evidence on the Critical Roles of IT Capability, Innovation and Multihoming," <strong>Internet Research</strong>.&nbsp;</span><a href="https://www.emerald.com/insight/content/doi/10.1108/INTR-01-2023-0061/full/html" target="_blank">read</a></p>
 	<p><span>Tom Mattson, Jie Ren, <u>Qin Weng</u> (2024). “The Bright and Dark Side of Social Media in the Marginalized Contexts,” Proceedings of 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January: 7204. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/65948a66-96fe-432f-91ad-b928ec81ba54">read</a></span></p>
       <p><span>Tom Mattson, <u>Qin Weng</u>, Jie Ren (2024). “Curse or Cure: Exploring Responses to Mental Health Related Posts in Reddit and ChatGPT Using Terror Management Theory,” Proceedings of 57th Hawaii International Conference on Systems Sciences, Oahu, HI, January: 7225-7234. <a target="_blank" href="https://scholarspace.manoa.hawaii.edu/items/e5e558ac-56b3-4324-a796-036508145195">read</a></span></p>
       <p><span><u>Qin Weng</u> (2023). “Agile CRISP-DM for Analytics Projects: Understanding Diabetes Treatment Using fsQCA,” Proceedings of 29th Americas Conference on Information Systems, Panama City, Panama, August. <a target="_blank" href="https://aisel.aisnet.org/amcis2023/sig_itpm/sig_itpm/4/">read</a>&nbsp;</span></p>
-      <p><span><u>Qin Weng</u>, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <strong>Journal of Strategic Information Systems</strong> 32(2): 101771. </span><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0963868723000173">read</a></p>
+      <p><span><u>Qin Weng</u>, Franck Soh (2023). “The Influence of Project Initiators’ Person-to-Person Followership on Project Popularity in Open Source Communities: The Role of Reach and Importance,” <strong>Journal of Strategic Information Systems</strong> 32(2): 101771.&nbsp;(Featured in Baylor Business Review, Fall 2024)&nbsp; </span><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0963868723000173">read</a> </p>
       <p><span>Viswanath Venkatesh, <u>Qin Weng</u>, Arun Rai, Likoebe M. Maruping (2023). “Guidelines for the Development of Three-Level Models: Bridging Levels of Analysis and Integrating Contextual Influences in IS Research,” <strong>Journal of the Association for Information Systems</strong> 24(1): 65-106. </span><a target="_blank" href="https://aisel.aisnet.org/jais/vol24/iss1/7/">read</a>
       <p><span><u>Qin Weng</u>, Wendy Wang, Amber Young (2022). “How Is IT Identity Claimed and Manifested?” Proceedings of 28th Americas Conference on Information Systems, Minneapolis, MN, August. (Selected as a Top Paper for AMCIS 2022) <a target="_blank" href="https://aisel.aisnet.org/amcis2022/conf_theme/conf_theme/6/">read</a></span></p>
       <p><span><u>Qin Weng</u>, Wendy Wang, Jignya Patel (2019). “Exploring the Formation of IT Identity: A Technology-Value Fit Model,” Proceedings of 25th Americas Conference on Information Systems, Cancun, Mexico, August. <a target="_blank" href="https://aisel.aisnet.org/amcis2019/adv_info_systems_research/adv_info_systems_research/13/">read</a></span></p>
@@ -107,9 +107,10 @@
     <!-- First Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle">Conference&nbsp;</h2>
-      <p class="sectionContent">Associate Editor, Digital Technologies and the Future of Work Track, ICIS, 2024&nbsp;</p>
+      <p class="sectionContent">Mini-track Chair,    Social Computing and Well-being, in Social Computing Track, AMCIS, 2025&nbsp;&nbsp;</p>
       <p class="sectionContent">Mini-track Chair, Bright and Dark Side of Social Media in the Marginalized Contexts, in Information Technology, Social Justice, and Marginalized Contexts Track, HICSS, 2024–2025&nbsp;</p>
-      <p class="sectionContent">Mini-track Chair, Digital Frontiers of Social Computing for Social Good, in Social Computing Track, AMCIS, 2024&nbsp;</p>
+      <p class="sectionContent">Associate Editor, Digital Technologies and the Future of Work Track, ICIS, 2024 &nbsp;</p>
+<p class="sectionContent">Mini-track Chair, Digital Frontiers of Social Computing for Social Good, in Social Computing Track, AMCIS, 2024&nbsp;</p>
       <p class="sectionContent">Mini-track Chair, The Dark Side of Social Media, in Social Computing Track, AMCIS, 2018–2023&nbsp;</p>
       <p class="sectionContent">Associate Editor, IS in Healthcare Track, ICIS, 2022 </p>
     </article>
@@ -117,7 +118,7 @@
     <article class="section2Content">
       <h2 class="sectionContentTitle">Reviewer&nbsp;</h2>
       <h3 class="sectionContentSubTitle">For Journals&nbsp;</h3>
-      <p class="sectionContent">MIS Quarterly, Information Systems Research, Journal of Strategic Information Systems, European Journal of Information Systems, Information &amp; Management, Internet Research, Journal of Computer Information Systems, Journal of Service Science and Management&nbsp;</p>
+      <p class="sectionContent">MIS Quarterly, Information Systems Research, Journal of Strategic Information Systems, European Journal of Information Systems, Information &amp; Management, Internet Research, Journal of Computer Information Systems, Journal of Service Science and Management, the DATA BASE for Advances in Information Systems&nbsp;</p>
 	  <h3 class="sectionContentSubTitle">For Conferences&nbsp;</h3>
       <p class="sectionContent">Americas Conference on Information Systems, Hawaii International Conference on System Sciences, International Conference on Information Systems, European Conference on Information Systems</p>
     </article>
